objects/Key_Metrics_Setting__mdt.object
<CustomObject>
    <description>Settings for configuring the Key Metrics LWC. The LWC sits on a Lightning Record Page and displays up to four key metrics in nicely displayed cards with dynamic rendering. As records are updated, metrics cards are updated in real time.</description>
    <fields>
        <fullName>Card_Format__c</fullName>
        <description>Displays cards across the layout either in a 1, 2, 3, or 4-up configuration.</description>
        <inlineHelpText>It is recommended for smaller devices to use the 1-up or 2-Up configuration</inlineHelpText>
        <label>Card Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1-Up</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2-Up</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3-Up</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4-Up</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Format__c</fullName>
        <description>Used to configure the currency-display-as of the formatted number base component for currency metrics</description>
        <inlineHelpText>Will render as follows: symbol: $, Code: USD, Name: US dollars</inlineHelpText>
        <label>Currency Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>symbol</fullName>
                    <default>true</default>
                    <label>symbol</label>
                </value>
                <value>
                    <fullName>code</fullName>
                </value>
                <value>
                    <fullName>name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Notation__c</fullName>
        <description>Based on Intl.NumberFormat() javascript object standard values to determine how numbers are rendered</description>
        <inlineHelpText>E.g. &quot;standard&quot; = $3,500,000; &quot;compact&quot; = $3.5M</inlineHelpText>
        <label>Currency Notation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>standard</fullName>
                    <default>true</default>
                    <label>standard</label>
                </value>
                <value>
                    <fullName>compact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Day_Format__c</fullName>
        <description>Determines the length of day values in dates being rendered</description>
        <inlineHelpText>&apos;numeric&apos; will drop leading zeros. Visit http://sfdc.co/date-component for more details.</inlineHelpText>
        <label>Date Day Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>numeric</fullName>
                    <default>true</default>
                    <label>numeric</label>
                </value>
                <value>
                    <fullName>2-digit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Month_Format__c</fullName>
        <description>Determines the length of month values in dates being rendered</description>
        <inlineHelpText>For options, in order, will display the following: 1, 01, J, Jan, January. Visit http://sfdc.co/date-component for more details.</inlineHelpText>
        <label>Date Month Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>numeric</fullName>
                    <default>true</default>
                    <label>numeric</label>
                </value>
                <value>
                    <fullName>2-digit</fullName>
                </value>
                <value>
                    <fullName>narrow</fullName>
                </value>
                <value>
                    <fullName>short</fullName>
                </value>
                <value>
                    <fullName>long</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Weekday_Format__c</fullName>
        <description>Determines the length of the weekday values in dates being rendered, if at all</description>
        <inlineHelpText>For options, in order, will display the following: M, Mon, Monday. Visit http://sfdc.co/date-component for more details.</inlineHelpText>
        <label>Date Weekday Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>narrow</fullName>
                </value>
                <value>
                    <fullName>short</fullName>
                </value>
                <value>
                    <fullName>long</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Year_Format__c</fullName>
        <description>Determines the length of year values in dates being rendered</description>
        <inlineHelpText>&apos;numeric&apos; will display the entire year (e.g. 2024). Visit http://sfdc.co/date-component for more details.</inlineHelpText>
        <label>Date Year Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>numeric</fullName>
                    <default>true</default>
                    <label>numeric</label>
                </value>
                <value>
                    <fullName>2-digit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metric_1_API_Name__c</fullName>
        <description>API Name of the field on the object for metric 1</description>
        <label>Metric 1 API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_1_Format__c</fullName>
        <description>Determines how the metric will be formatted on the LWC</description>
        <label>Metric 1 Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>decimal</fullName>
                    <default>true</default>
                    <label>decimal</label>
                </value>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metric_1_Label__c</fullName>
        <description>Label of the metric as you&apos;d like it displayed in the LWC</description>
        <label>Metric 1 Label</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_2_API_Name__c</fullName>
        <description>API Name of the field on the object for metric 2</description>
        <label>Metric 2 API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_2_Format__c</fullName>
        <label>Metric 2 Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>decimal</fullName>
                    <default>true</default>
                    <label>decimal</label>
                </value>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metric_2_Label__c</fullName>
        <label>Metric 2 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_3_API_Name__c</fullName>
        <description>API Name of the field on the object for metric 3</description>
        <label>Metric 3 API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_3_Format__c</fullName>
        <label>Metric 3 Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>decimal</fullName>
                    <default>true</default>
                    <label>decimal</label>
                </value>
                <value>
                    <fullName>currency</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metric_3_Label__c</fullName>
        <label>Metric 3 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Notation__c</fullName>
        <description>Based on Intl.NumberFormat() javascript object standard values to determine how numbers are rendered</description>
        <inlineHelpText>E.g. &quot;standard&quot; = 3,500,000; &quot;scientific&quot; = 3.5E6; &quot;compact&quot; = 3.5M. Applies only to &apos;decimal&apos; metric formats</inlineHelpText>
        <label>Number Notation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>standard</fullName>
                    <default>true</default>
                    <label>standard</label>
                </value>
                <value>
                    <fullName>scientific</fullName>
                </value>
                <value>
                    <fullName>compact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>Object API name of the record metrics</description>
        <inlineHelpText>If using a custom object, include the __c suffix. E.g. My_Custom_Object__c</inlineHelpText>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Key Metrics Setting</label>
    <pluralLabel>Key Metrics Settings</pluralLabel>
</CustomObject>